Migrate performance modelling to Mímir service
